--- a/templates/create.html
+++ b/templates/create.html
@@ -170,6 +170,9 @@
 		.form-group .toggle-buttons input[type="radio"] {
 			display: none;
 		}
+		.form-group .wrong-group {
+			color: #ff2828;
+		}
 
 		.form-group .toggle-buttons input[type="radio"] + label {
 			display: inline-block;
@@ -218,24 +221,27 @@
 				<input type="text" id="test-name" name="test-name" maxlength="50" required>
 				<div class="character-count"><span>0</span>/50</div>
 			</div>
+
 			<div class="form-group">
 				<label for="test-description">Описание теста
 					<textarea id="test-description" name="test-description" rows="5" maxlength="300" required></textarea>
 				<div class="character-count"><span>0</span>/300</div>
 			</div>
+
 			<div class="form-group">
-				<label for="test-images">Изображения Теста:</label>
-				<div class="image-uploads">
-					<div class="image-upload">
-						<label for="test-image-1">
-							<span class="image-preview"></span>
-							<input type="file" id="test-image-1" name="test-image-1" accept="image/*">
-							<div class="image-upload-label">Изображение №1</div>
-						</label>
-					</div>
+				{% if flag %}
+				<div class="wrong-group">
+					<label for="wrong">Введите число!!!</label>
 				</div>
-				<div class="add-more-images">Добавить ещё изображениея</div>
+				{% else %}
+				<label for="test-kol">Количество изображений:</label>
+				{% endif %}
+				<input type="text" id="test-kol" name="test-kol" maxlength="2" required>
+				<div class="character-count"><span>0</span>/2</div>
 			</div>
+
+
+
 			<div class="form-group">
 				<label for="test-type">Тип теста:</label>
 				<div class="toggle-buttons">
@@ -271,45 +277,6 @@
 				var $characterCount = $(this).parent().find('.character-count span');
 				$characterCount.text(currentLength);
 			});
-
-
-			$('.add-more-images').on('click', function() {
-				var numImages = $('.image-uploads .image-upload').length;
-				if (numImages < 16) {
-					var $newImageUpload = $('.image-uploads .image-upload').first().clone();
-					$newImageUpload.find('input').attr('id', 'test-image-' + (numImages + 1)).attr('name', 'test-image-' + (numImages + 1));
-										$newImageUpload.find('.image-preview').css('background-image', 'none');
-					$newImageUpload.find('.image-upload-label').text('Изображение №' + (numImages + 1));
-					$('.image-uploads').append($newImageUpload);
-				}
-			});
-
-
-			$('.image-uploads').on('change', 'input[type="file"]', function(e) {
-				var $imagePreview = $(this).siblings('.image-preview');
-				var file = e.target.files[0];
-				var reader = new FileReader();
-				reader.onload = function(e) {
-					$imagePreview.css('background-image', 'url(' + e.target.result + ')');
-					$imagePreview.css('background-size', 'cover');
-					$imagePreview.css('background-position', 'center');
-				}
-				reader.readAsDataURL(file);
-			});
-
-
-			$('form').on('submit', function(e) {
-				var $imageUploads = $(this).find('.image-uploads .image-upload input[type="file"]');
-				for (var i = 0; i < $imageUploads.length; i++) {
-					var file = $imageUploads[i].files[0];
-					if (file && file.size > 5242880) { // 5 MB
-						alert('Image size is too large. Please choose an image less than 5 MB.');
-						e.preventDefault();
-						return;
-					}
-				}
-			});
-		});
 	</script>
 </body>
 </html>
