--- a/templates/login.html
+++ b/templates/login.html
@@ -1,29 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Авторизация</h1>
-    <form action="" method="post">
+    <form class=form action="" method="post">
+        <h1>Авторизация</h1>
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(class="form-control", type="email") }}<br>
+        <div class="input labeled">
+            {{ form.email(class="form-control email-icon", type="email", placeholder="email почта") }}<br>
             {% for error in form.email.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
             {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(class="form-control", type="password") }}<br>
+        </div>
+        <div class="input labeled">
+            {{ form.password(class="form-control password-icon", type="password", placeholder="Пароль") }}<br>
             {% for error in form.password.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
             {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        </div>
+        <div>
+            {{ form.remember_me() }} {{ form.remember_me.label }}
+        </div>
+        <p>{{ form.submit(type="submit", class="begin-reg-ath") }}</p>
         <div>{{ message }}</div>
     </form>
 {% endblock %}
