--- a/templates/create.html
+++ b/templates/create.html
@@ -210,12 +210,75 @@
 			background-color: #FFCA28;
 			color: #253137;
 		}
+		input[type="file"] {
+			border-box;
+			width: 100%;
+			padding: 0px;
+			border: none;
+			border-radius: 5px;
+			margin-bottom: 20px;
+		}
+
+		input::file-selector-button {
+			display: inline-block;
+			padding: 10px 20px;
+			background-color: #253137;
+			border: none;
+			border-radius: 5px;
+			font-size: 18px;
+			color: #FFCA28;
+			cursor: pointer;
+			transition: background-color 0.2s ease-in-out;
+		}
+		.wrong-group {
+			color: #ff2828;
+		}
+
+		input[type="file"] {
+			border-box;
+			width: 100%;
+			padding: 5px;
+			border: none;
+			border-radius: 5px;
+			margin-bottom: 40px;
+		}
+
+		input::file-selector-button {
+
+			background-color: #253137;
+			border: none;
+			border-radius: 5px;
+			font-size: 18px;
+			color: #FFCA28;
+			cursor: pointer;
+			transition: background-color 0.2s ease-in-out;
+	}
+		input::file-selector-button:hover {
+			background-color: #FFCA28;
+			color: #253137;
+	}
+		form input[type="submit"] {
+			background-color: #253137;
+			color: #FFCA28;
+			border: none;
+			border-radius: 4px;
+			padding: 10px 20px;
+			font-size: 18px;
+			cursor: pointer;
+			transition: background-color 0.2s ease-in-out;
+		}
+
+		form input[type="submit"]:hover {
+			background-color: #FFCA28;
+			color: #253137;
+		}
+
 	</style>
 </head>
 <body>
 	<div class="container">
 		<h1>Create Test</h1>
-		<form>
+		<form method="post", enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="test-name">Название теста:</label>
 				<input type="text" id="test-name" name="test-name" maxlength="50" required>
@@ -239,32 +302,26 @@
 				<input type="text" id="test-kol" name="test-kol" maxlength="2" required>
 				<div class="character-count"><span>0</span>/2</div>
 			</div>
-
-
-
 			<div class="form-group">
 				<label for="test-type">Тип теста:</label>
 				<div class="toggle-buttons">
-					<input type="radio" id="test-type-1" name="test-type" value="type-1" checked>
+					<input type="radio" id="test-type-1" name="test-type" value="public" checked>
 					<label for="test-type-1">Публичный</label>
-					<input type="radio" id="test-type-2" name="test-type" value="type-2">
+					<input type="radio" id="test-type-2" name="test-type" value="hidden">
 					<label for="test-type-2">Скрытый</label>
 				</div>
 			</div>
-			<div class="form-group">
-				<label for="test-difficulty">Test Difficulty:</label>
-				<div class="toggle-buttons">
-					<input type="radio" id="test-difficulty-1" name="test-difficulty" value="easy" checked>
-					<label for="test-difficulty-1">Easy</label>
-					<input type="radio" id="test-difficulty-2" name="test-difficulty" value="medium">
-					<label for="test-difficulty-2">Medium</label>
-					<input type="radio" id="test-difficulty-3" name="test-difficulty" value="hard">
-					<label for="test-difficulty-3">Hard</label>
+			{% if file %}
+				<div class="wrong-group">
+					<label for="wrong">Введите только 1 изображение!!!</label>
 				</div>
-			</div>
-			<div class="form-group">
-				<button type="submit" class="submit-button">Создать тест</button>
-			</div>
+			{% else %}
+			<label for="test-type-1">Обложка теста</label>
+			{% endif %}
+            {{ form.csrf_token }}
+			{{ form.images }}
+			{{ form.submit }}
+
 		</form>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
