сделал норм таблицу, добавил функцию, возвращающую всю инфу о тесте по его id (get_test). так же функция записывания в БД теста (insert_test)

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="button">настройки</button>
+            <button class="button" onclick="window.location.href = 'http://127.0.0.1:5000/settings-profile'">настройки</button>
             <button class="button">тесты</button>
             <button class="button">избранное</button>
             <button class="button" onclick="window.location.href = 'http://127.0.0.1:5000/logout'">выйти</button>
