сделал заново БД и всё, с ней связанное

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,8 @@ body {
   font-weight: bold;
   background-repeat: no-repeat;
   background-color: #263238;
+  text-align: center;
+  color: #FFCA28;
 }
 
 .user-icon{
