--- a/templates/test_change.html
+++ b/templates/test_change.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>My Items</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
+        background-color: #263238;
+        color: #FFCA28;
       }
 
       h1 {
@@ -21,17 +25,20 @@
       }
 
       .item {
+        background-color: #3A424B;
         width: 300px;
-        height: 450px;
+        height: 520px;
         margin: 20px;
-        padding: 10px;
-        border: 1px solid #ddd;
+        padding: 15px;
+        border: 2px solid #ddd;
         border-radius: 10px;
+        border-color: #FFCA28;
         box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
         transition: all 0.3s ease-in-out;
       }
 
       .item:hover {
+        background-color: #263238;
         transform: scale(1.05);
         box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
       }
@@ -69,8 +76,8 @@
         left: 0;
         width: 50%;
         height: 40px;
-        background-color: #555;
-        color: #fff;
+        background-color: #263238;
+        color: #FFCA28;
         font-size: 16px;
         font-weight: bold;
         text-align: center;
@@ -80,38 +87,71 @@
       }
 
       .item-btn:hover {
-        background-color: #333;
+        color: #263238;
+        background-color: #FFCA28;
       }
 
       .item-details {
         font-size: 16px;
         margin-top: 10px;
+        position:relative;
+        bottom: -80px;
       }
 
       .item-details span {
         font-weight: bold;
       }
+
     </style>
-  </head>
-  <body>
-    <h1>My Items</h1>
-    <div class="container">
-      {% for item in items %}
-       <div class="item">
-         <a href="https://www.google.com">
-          <div class="item-image">
+</head>
+<body>
+<h1>My Items</h1>
+<div class="container">
+    {% for item in items %}
+    <div class="item" onclick="sendPost('{{ item.id }}')">
+        <div class="item-image">
             <img src="{{ item.image }}" alt="{{ item.title }}">
             <a href="#" class="item-btn">View Details</a>
-          </div>
-          <div class="item-title">{{ item.title }}</div>
-          <div class="item-description">{{ item.description }}</div>
-          <div class="item-details">
-              <p>{{ item.title }} {{ item.title }} {{ item.title }}</p>
-          </div>
-        </a>
         </div>
-
-      {% endfor %}
+        <div class="item-title">{{ item.title }}</div>
+        <div class="item-description">{{ item.description }}</div>
+        <div class="item-details d-flex justify-content-around">
+            <div class="d-flex flex-row">
+                {{ item.detail1 }}
+            </div>
+            <div class="d-flex flex-row">
+                {{ item.detail1 }}
+            </div>
+            <div class="d-flex flex-row">
+                {{ item.detail1 }}
+            </div>
+        </div>
     </div>
-  </body>
+    {% endfor %}
+</div>
+<script>
+    function sendPost(a) {
+      fetch('/test', {
+        method: 'POST',
+        body: JSON.stringify({id: a}),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        return response.json();
+      })
+      .then(data => {
+        console.log(data);
+      })
+      .catch(error => {
+        console.error('There was a problem with the fetch operation:', error);
+      });
+    }
+
+</script>
+</body>
 </html>
