--- a/templates/settings-profile.html
+++ b/templates/settings-profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Страница настроек</title>
-  <style>
+    <meta charset="UTF-8">
+    <title>Страница настроек</title>
+    <style>
     body {
       background-color: #3a454b;
     }
@@ -36,8 +36,6 @@
       flex-direction: column;
       width: 75%;
       margin: auto;
-
-
     }
     .btn {
       background-color: #4CAF50;
@@ -52,6 +50,7 @@
       cursor: pointer;
       border-radius: 5px;
       margin-bottom: 15px;
+
     }
     .password-btn {
       margin-top: 20px;
@@ -68,12 +67,17 @@
     .input-group {
       display: flex;
       margin-bottom: 10px;
+      align-items: center;
     }
     .input-group label {
       width: 70px;
       margin-right: 5px;
+
     }
     .input-group input {
+      height: 35px;
+      resize: none;
+      vertical-align: top;
       flex: 1;
       padding: 5px;
       border-radius: 5px;
@@ -98,42 +102,67 @@
       font-size: 18px;
       font-weight: bold;
     }
-  </style>
+    .deck input{
+    vertical-align: top;
+      height: 200px;
+      resize: none;
+    }
+
+    input::file-selector-button {
+		 background-color: #4CAF50;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      text: Загрузить';
+		}
+
+
+
+    </style>
 </head>
 <body>
-  <div class="container">
+<div class="container">
     <div class="left-section">
-      <div class="profile-photo">
-        <img src="/static/images/right.png" alt="Аватар пользователя" class="avatar">
-        <div class="btn-group">
-          <div class="text"> фото профиля </div>
-          <button class="btn">Загрузить</button>
-          <div class="text"> фон фото профиля </div>
-          <button class="btn">Загрузить фон аватара</button>
+        <div class="profile-photo">
+            <img src="/static/images/right.png" alt="Аватар пользователя" class="avatar">
+            <div class="btn-group">
+                <div class="text"> фото профиля</div>
+                <button class="btn" onclick="document.getElementById('getFile').click()">Загрузить</button>
+                <input type='file' id="getFile" style="display:none">
+                <div class="text"> фон фото профиля</div>
+                <button class="btn"  onclick="document.getElementById('getFile').click()" >Загрузить фон аватара</button>
+            </div>
         </div>
-      </div>
-      <button class="btn password-btn">Изменить пароль</button>
+        <button class="btn password-btn">Изменить пароль</button>
     </div>
     <div class="right-section">
-      <form>
-        <div class="input-group">
-          <label for="login1">Логин:</label>
-          <input type="text" id="login1">
-        </div>
-        <div class="input-group">
-          <label for="login2">Логин:</label>
-          <input type="text" id="login2">
-        </div>
-        <div class="input-group">
-          <label for="login3">Логин:</label>
-          <input type="text" id="login3">
-        </div>
-        <div class="form-btn-group">
-          <button class="btn">Сохранить изменения</button>
-          <button class="btn">Сбросить</button>
-        </div>
-      </form>
+        <form>
+            <div class="input-group">
+                <label for="login1">Логин:</label>
+                <input type="text" id="login1">
+            </div>
+            <div class="input-group">
+                <label for="login2">E-mail:</label>
+                <input type="text" id="login2">
+            </div>
+            <div class="input-group deck">
+                <label for="login3">О себе:</label>
+                <input type="text" id="login3">
+            </div>
+            <div class="form-btn-group">
+                <button class="btn">Сохранить изменения</button>
+                <button class="btn">Сбросить</button>
+            </div>
+        </form>
     </div>
-  </div>
+</div>
 </body>
 </html>
