Доделал прохождение тестов

--- a/templates/end.html
+++ b/templates/end.html
@@ -121,7 +121,7 @@
     <h1 class="title">{{ inf.name }}</h1>
     <p class="subtitle">Победитель:</p>
     <p class="subtitle">{{ win.description }} 💥💣💥🎉🎈</p>
-    <img class="winner-image" src="{{ win.file.path }}" alt="Winner Image">
+    <img class="winner-image" src="/{{ win.file.path }}" alt="Winner Image">
     <form method="post">
         <div class="rating-area">
             <input type="radio" id="star-5" name="rating" value="5">
