--- a/templates/test_change.html
+++ b/templates/test_change.html
@@ -101,11 +101,45 @@
       .item-details span {
         font-weight: bold;
       }
+      .nav {
+
+			background-color: #263238;
+			overflow: hidden;
+		}
+
+		.nav a {
+			float: right;
+			color: #FFCA28;
+			text-align: center;
+			padding: 16px 16px;
+			text-decoration: none;
+            font-family: Verdana, Helvetica, Arial, sans-serif;
+		}
+		.nav a {
+		    margin-left: 1400px;
+		}
+
+        .nav .pick a {
+            float: left;
+		    margin-left:0px;
+		    padding: 0px 0px;
+		}
+		.nav .ak a:hover {
+			background-color: #FFCA28;
+			color: black;
+		}
 
 
     </style>
 </head>
 <body>
+<div class="nav">
+    <div class="pick">
+    <a href="/">
+        <img src="/static/images/logo.svg" >
+    </a>
+    </div>
+</div>
 <h1>My Items</h1>
 <div class="container">
     {% for item in items %}
