--- a/templates/settings-profile.html
+++ b/templates/settings-profile.html
@@ -121,7 +121,6 @@
       cursor: pointer;
       border-radius: 5px;
       margin-bottom: 15px;
-      text: Загрузить';
 		}
 
 
@@ -129,40 +128,44 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="left-section">
-        <div class="profile-photo">
-            <img src="/static/images/right.png" alt="Аватар пользователя" class="avatar">
-            <div class="btn-group">
-                <div class="text"> фото профиля</div>
-                <button class="btn" onclick="document.getElementById('getFile').click()">Загрузить</button>
-                <input type='file' id="getFile" style="display:none">
-                <div class="text"> фон фото профиля</div>
-                <button class="btn"  onclick="document.getElementById('getFile').click()" >Загрузить фон аватара</button>
+    <form method="post" enctype="multipart/form-data">
+    <div class="container">
+        <div class="left-section">
+            <div class="profile-photo">
+                <img src="/static/images/right.png" alt="Аватар пользователя" class="avatar">
+                <div class="btn-group">
+                    <div class="text"> фото профиля</div>
+                    <button class="btn" onclick="document.getElementById('pro-photo').click()">Загрузить</button>
+                    <input type='file' id="pro-photo" name="pro" accept="image/png, image/gif, image/jpeg" style="display:none">
+                    <div class="text"> фон фото профиля</div>
+                    <button class="btn"  onclick="document.getElementById('carpet-avatar').click()" >Загрузить фон аватара</button>
+                    <input type='file' id="carpet-avatar" name="carpet" style="display:none">
+                </div>
             </div>
+            <button class="btn password-btn">Изменить пароль</button>
         </div>
-        <button class="btn password-btn">Изменить пароль</button>
+        <div class="right-section">
+            <form>
+                <div class="input-group">
+                    <label for="login1">Логин:</label>
+                    <input type="text" id="login1">
+                </div>
+                <div class="input-group">
+                    <label for="login2">E-mail:</label>
+                    <input type="text" id="login2">
+                </div>
+                <div class="input-group deck">
+                    <label for="login3">О себе:</label>
+                    <input type="text" id="login3">
+                </div>
+                <div class="form-btn-group">
+                    <button class="btn">Сохранить изменения</button>
+                    <button class="btn">Сбросить</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="right-section">
-        <form>
-            <div class="input-group">
-                <label for="login1">Логин:</label>
-                <input type="text" id="login1">
-            </div>
-            <div class="input-group">
-                <label for="login2">E-mail:</label>
-                <input type="text" id="login2">
-            </div>
-            <div class="input-group deck">
-                <label for="login3">О себе:</label>
-                <input type="text" id="login3">
-            </div>
-            <div class="form-btn-group">
-                <button class="btn">Сохранить изменения</button>
-                <button class="btn">Сбросить</button>
-            </div>
-        </form>
-    </div>
-</div>
+
+    </form>
 </body>
 </html>
